<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".SurveiActivity">


    <TextView
        android:id="@+id/instuction"
        android:layout_width="231dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:padding="6dp"
        android:text="@string/instuction"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionTTL"
        android:layout_width="151dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:text="@string/pertanyaan1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instuction" />

    <EditText
        android:id="@+id/TextDate"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL"/>


    <TextView
        android:id="@+id/questionTTL2"
        android:layout_width="97dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/pertanyaan2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextDate" />

    <EditText
        android:id="@+id/Textjobs"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint2"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL2"/>


    <TextView
        android:id="@+id/questionTTL3"
        android:layout_width="179dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/pertanyaan3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textjobs" />

    <EditText
        android:id="@+id/TextLastVac"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint3"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL3"/>


    <TextView
        android:id="@+id/questionTTL4"
        android:layout_width="118dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/pertanyaan4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLastVac" />

    <EditText
        android:id="@+id/TextFavCity"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint4"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL4"/>

    <TextView
        android:id="@+id/questionTTL5"
        android:layout_width="183dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/pertanyaan5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextFavCity" />

    <TextView
        android:id="@+id/questionTTL6"
        android:layout_width="233dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/pertanyaan6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEditLongStay" />

    <EditText
        android:id="@+id/TextEditLongStay"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint5"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL5" />

    <Button
        android:id="@+id/buttonsurvei"
        android:layout_width="342dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/costum_button"
        android:text="@string/button_survei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEditSuasana" />

    <EditText
        android:id="@+id/TextEditSuasana"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_edit_text"
        android:hint="@string/Hint6"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTTL6" />

    <ProgressBar
        android:id="@+id/progress_bar_survei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        tools:ignore="MissingConstrants"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>